--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -2,6 +2,8 @@ version: '3.8'
 
 services:
   app:
+    environment:
+    - EDGEDB_INSTALL_IN_DOCKER=allow
     build:
       context: ..
       dockerfile: .devcontainer/Dockerfile
@@ -19,7 +21,7 @@ services:
     # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
     # Runs app on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
-    # network_mode: service:app
+    network_mode: service:edgedb
     # Uncomment the next line to use a non-root user for all processes.
     # user: vscode
 
